# unity-scene-repacker

./: .gitignore  Cargo.toml  README.md  build.rs  justfile  pyproject.toml  requirements.txt  wip-hollowknight-types.json.lz4
.github/workflows/: nuget-release.yml  release.yml
bindings/: Cargo.toml  build.rs
bindings/nuget/: README.md  unityscenerepacker.nuspec
bindings/src/: lib.rs
cli/: Cargo.toml
cli/src/: completion.rs  lib.rs  locate.rs  logger.rs  main.rs  py.rs  utils.rs
docs/: CHANGELOG.md  demo.cast  release.md
examples/: dump_mb.rs  export_fsm.rs  export_monobehaviour_typetrees.rs  export_ns_monsters.rs  hk.rs  repro.rs  script_stats.rs  testing.rs
hollowknight/: hk.json  palecourt.json
in/: empty_scene_bundle  scenes.json
objects/: hk-enemies.jsonc  hk-realworld copy.jsonc  hk-realworld.jsonc  hk-representative.jsonc  ns-bosses.json  ns-by-type.json  ns-monsters.json  silksong-minimal.jsonc  silksong.jsonc
preloads/: ns-bosses.json  ns-monsters.json
resources/: lz4.tpk
scripts/: diff.py  dump.py  hk_get_transitions.py  repl.py  test.py
src/: cli.py  cli_analyze.py  cli_assetbundle.py  cli_filterdown.py  cli_merge_assetbundle_scene.py  cli_merge_assetbundles.py  cli_test.py  env.rs  game_files.rs  lib.rs  main.rs  merge_serialized.rs  monobehaviour_typetree_export.rs  prune.py  prune.rs  reachable.rs  repack.py  scene_lookup.rs  serialized_file_builder.rs  test_analyze_drops.py  trace_pptr.rs  typetree_cache.rs  typetree_generator_api.rs  typetree_generator_cache.rs  utils.py  utils.rs
src/env/: game_files.rs  handle.rs  mod.rs  resolver.rs
src/typetree_generator_api/: bindings.h  bindings.rs  cache.rs  generated.rs  mod.rs
src/unity/: mod.rs  pptr.rs  types.rs
src/unity/types/: utils.rs
src/unity_scene_repacker/: cli.py  prune.py  repack.py  utils.py
test/: monster_kinds.py
tt-api-lib/: TypeTreeGeneratorAPI.lib
typetree-generator-api/: Cargo.toml  build.rs
typetree-generator-api/src/: generated.rs  lib.rs
