[package]
name = "unity-scene-repacker"
version = "2.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/jakobhellermann/unity-scene-repacker"
description = "Repack unity level files into filtered asset bundles you can load at runtime"

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive", "unstable-markdown"] }
elsa = "1.11"
indexmap = { version = "2.9", features = ["serde"] }
json5 = "0.4"
memmap2 = "0.9"
rabex = { git = "https://github.com/jakobhellermann/RustyAssetBundleEXtractor", branch = "all", features = [
    "serde_path_to_error",
] }
rustc-hash = "2.1"
paris = { version = "1.5", features = ["macros", "no_logger"] }
serde = { version = "1.0", default-features = false }
serde_derive = "1.0"
steamlocate = "2.0"

[features]
dhat-heap = []

[lints.clippy]
redundant_pattern_matching = "allow"

# [patch."https://github.com/jakobhellermann/RustyAssetBundleEXtractor"]
# rabex = { path = "/home/jakob/dev/unity/RustyAssetBundleEXtractor" }
