[project]
name = "unity-scene-repacker"
requires-python = ">=3.8"
classifiers = ["Programming Language :: Rust", "Topic :: Games/Entertainment"]
dynamic = ["version"]

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
manifest-path = "cli/Cargo.toml"
module-name = "unity_scene_repacker"
data = "data"
features = ["python-module"]

[project.scripts]
unity-scene-repacker = "unity_scene_repacker:entrypoint"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
