[package]
name = "bindings"
version = "0.2.0"
edition = "2024"

[lib]
name = "unityscenerepacker"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
indexmap = "2.9.0"
serde_json = "1.0.140"
unity-scene-repacker = { version = "2.1.0", path = ".." }
typetree-generator-api = { path = "../typetree-generator-api" }

rabex = { workspace = true, default-features = false, features = [
    "embed-tpk",
    "compression-lz4",
] }
