[package]
name = "bindings"
edition.workspace = true
version.workspace = true

[lib]
name = "unityscenerepacker"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
indexmap = "2.9"
serde_json = "1.0"
unity-scene-repacker = { version = "2.1", path = ".." }
rabex = { workspace = true, default-features = false, features = [
    "embed-tpk",
    "compression-lz4",
] }
rabex-env.workspace = true
