[package]
name = "unity-scene-repacker-bin"
version = "2.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jakobhellermann/unity-scene-repacker"
description = "Repack unity level files into filtered asset bundles you can load at runtime"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "unstable-markdown"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
indexmap = "2.9"
json5 = "0.4"
log = "0.4"
paris = { version = "1.5", features = ["macros", "no_logger"] }
rabex = { workspace = true, features = ["compression-all"] }
steamlocate = "2.0"
unity-scene-repacker = { version = "2.1", path = ".." }
typetree-generator-api = { path = "../typetree-generator-api" }

[features]
dhat-heap = []

[[bin]]
name = "unity-scene-repacker"
path = "src/main.rs"
