[package]
name = "unity-scene-repacker-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "unstable-markdown"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
indexmap = "2.9"
json5 = "0.4"
log = "0.4"
paris = { version = "1.5", features = ["macros", "no_logger"] }
rabex = { workspace = true, features = ["compression-all"] }
steamlocate = "2.0"
unity-scene-repacker = { version = "2.1", path = ".." }

[features]
dhat-heap = []

[[bin]]
name = "unity-scene-repacker"
path = "src/main.rs"
